--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,18 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  build_runner: ^2.11.1
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^20.1.0
   http: ^1.6.0
+  mockito: ^5.6.3
   path: ^1.9.1
   provider: ^6.1.5+1
+  shared_preferences: ^2.5.4
   sqflite: ^2.4.2
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_lints: ^6.0.0
