--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,13 @@ dependencies:
   shared_preferences: ^2.5.4
   sqflite: ^2.4.2
   timezone: ^0.10.1
+  workmanager: ^0.9.0+3
 
 dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
